fix #2557 UI: Fix bookmark list height, avoid covered by footer bar

--- a/src/client/components/sidebar/sidebar.styl
+++ b/src/client/components/sidebar/sidebar.styl
@@ -5,7 +5,7 @@
   position absolute
   left 43px
   top 56px
-  bottom 0
+  bottom 36px
   z-index 200
   width 0
   overflow-y scroll
@@ -16,6 +16,8 @@
       display none !important
 .system-ui .sidebar-panel
   top 45px
+.pinned .sidebar-panel
+  bottom 0
 .sidebar
   position absolute
   left 0
